--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="a" role="tabpanel" aria-labelledby="a-list">
               <h3 class="display-5">UX Design</h3>
-                <p>When paired with Christopher's background in usability and inclusive design, his experiences sketching, wireframing, and prototyping offer the skills needed to jumpstart any user experience design project.</p>
-                <a href="/work#design" class="btn btn-sm btn-dark my-2" role="button">See Christopher's design work →</a>
+                <p>Paired with Christopher's background in usability and inclusive design, his experiences sketching, wireframing, and prototyping offer the skills needed to jumpstart any user experience design project.</p>
+                <a href="/work#design" class="btn btn-md btn-dark my-2" role="button">See Christopher's design work →</a>
             </div>
             <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b-list">
                 <h3 class="display-5">User Research</h3>
                 <p>Persona building and usability testing only scratch the surface – Christopher has a deep understanding of the importance that research plays within the design process.</p>
-                <a href="/work#research" class="btn btn-sm btn-dark my-2" role="button">See Christopher's research work →</a>
+                <a href="/work#research" class="btn btn-md btn-dark my-2" role="button">See Christopher's research work →</a>
             </div>
             <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c-list">
               <h3 class="display-5">Information Architecture</h3>
                 <p>Christopher has years of practice in content strategy including hands on experience with CMS tools and the development of visual sitemaps.</p>
-                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">See Christopher's IA work →</a>
+                <a href="/work#ia" class="btn btn-md btn-dark my-2" role="button">See Christopher's IA work →</a>
             </div>
             <div class="tab-pane fade" id="d" role="tabpanel" aria-labelledby="d-list">
               <h3 class="display-5">Development</h3>
                 <p>Bridging the gap between design and development, Christopher's strong background and demonstrated history working in HTML, CSS, and JavaScript help make wireframes a reality.</p>
-                <a href="/work#dev" class="btn btn-sm btn-dark my-2" role="button">See Christopher's development work →</a>
+                <a href="/work#dev" class="btn btn-md btn-dark my-2" role="button">See Christopher's development work →</a>
             </div>
           </div>
         </div>
@@ -122,14 +122,14 @@
   </div>
   <!-- END WORK -->
 
-  <footer class="container py-5">
-      <div class="row">
-        <div class="col-12 col-md text-center">
-          <a class="navbar-brand" href="/"><img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith</a>
-          <small class="d-block text-muted">© 2019</small>
-        </div>
+  <footer class="container-fluid py-5">
+    <div class="row">
+      <div class="col-12 col-md text-center">
+        <a class="navbar-brand" href="/"><img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith</a>
+        <small class="d-block text-muted">© 2019</small>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
