--- a/process.html
+++ b/process.html
@@ -26,14 +26,8 @@
         <li class="nav-item">
           <a class="nav-link active" href="/process">Process</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Work
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/work/research">Research</a>
-            <a class="dropdown-item" href="/work/design">Design</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/work">Work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
@@ -42,18 +36,19 @@
           <a class="nav-link" href="/resume.pdf" target="_blank">Resume</a>
         </li>
       </ul>
-      <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Let's talk &rarr;</button>
+      <a href="mailto:chrisrgriff@gmail.com" class="btn btn-outline-warning my-2 my-sm-0" role="button">Let's talk &rarr;</a>
     </div>
   </nav>
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0">
+  <div class="jumbotron jumbotron-fluid mx-0 mb-0">
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
           <h1 class="display-3">User Centered & Data Driven</h1>
-          <p class="lead" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
+          <p class="lead mb-5" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
+          <img src="img/target.svg" class="img-fluid pb-1"/>
         </div>
       </div>
     </div>
@@ -61,25 +56,22 @@
   <!-- END HERO -->
 
 
-  <div class="container-fluid text-center">
-    <div class="row justify-content-md-center">
-      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-left">
-        <img src="img/research.svg" class="img-fluid"/>
-      </div>
-    </div>
-  </div>
-
-  <div class="container py-5">
+  <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
-        <h1 class="display-4"></h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
         <p class="lead">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
       </div>
     </div>
   </div>
 
-  
+  <div class="container-fluid text-center">
+    <div class="row justify-content-md-center">
+      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-left">
+        <img src="img/research.svg" class="img-fluid"/>
+      </div>
+    </div>
+  </div>  
 
   <div class="container">
     <div class="row justify-content-md-center py-5">
