--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700&display=swap" rel="stylesheet">
 
-  <title>Christopher Griffith: UX Designer, Developer, & Strategist</title>
+  <title>About | Christopher Griffith: UX Designer, Developer, & Strategist</title>
 
 </head>
 <body>
