--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700&display=swap" rel="stylesheet">
 
-  <title>Process | Christopher Griffith: UX Designer, Developer, & Strategist</title>
+  <title>Work | Christopher Griffith: UX Designer, Developer, & Strategist</title>
 
 </head>
 <body>
@@ -24,10 +24,10 @@
       </a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/process">Process</a>
+          <a class="nav-link" href="/process">Process</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/work">Work</a>
+          <a class="nav-link active" href="/work">Work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
@@ -46,8 +46,8 @@
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">User Centered & Data Driven</h1>
-          <p class="lead mb-5" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
+          <h1 class="display-3">Solving Challenging Business Problems</h1>
+          <p class="lead mb-5" style="font-size:2.5rem !important;">Work history ranging from UX design to information architecture</p>
           <img src="img/target.svg" class="img-fluid pb-1"/>
         </div>
       </div>
