--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
           <h1 class="display-3">Solving Challenging Business Problems</h1>
-          <p class="lead mb-5" style="font-size:2.5rem !important;">Work history ranging from UX design to information architecture</p>
+          <p class="lead mb-5" style="font-size:2.5rem !important;">Christopher's work history ranges from project management to digital marketing to UX</p>
           <img src="img/target.svg" class="img-fluid pb-1"/>
         </div>
       </div>
