--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -49,9 +49,9 @@
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">Solving Challenging Business Problems</h1>
+          <h1 class="display-3">Solving challenging business problems</h1>
           <p class="lead mb-5" style="font-size:2.5rem !important;">Christopher's work history ranges from project management to digital marketing to UX</p>
-          <img src="img/target.svg" class="img-fluid pb-1"/>
+          <img src="img/flow.svg" class="img-fluid pb-1"/>
         </div>
       </div>
     </div>
