--- a/work.html
+++ b/work.html
@@ -82,6 +82,15 @@
     </div>
   </div>
 
+  <footer class="container-fluid py-5">
+    <div class="row">
+      <div class="col-12 col-md text-center">
+        <a class="navbar-brand" href="/"><img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith</a>
+        <small class="d-block text-muted">© 2019</small>
+      </div>
+    </div>
+  </footer>
+
 
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
