--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
   <title>Christopher Griffith: UX Designer, Developer, & Strategist</title>
 
+  <meta property="og:title" content="Christopher Griffith" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://christophergriff.com" />
+  <meta property="og:image" content="https://www.christophergriff.com/img/og.png" />
+  <meta property="og:site_name" content="Christopher Griffith" />
+  <meta property="og:description" content="An experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and e-commerce." />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:domain" content="https://christophergriff.com" />
+  <meta name="twitter:title" content="Christopher Griffith" />
+  <meta name="twitter:description" content="An experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and e-commerce." />
+  <meta name="twitter:image" content="https://www.christophergriff.com/img/og.png" />
+  <meta itemprop="image" content="https://www.christophergriff.com/img/og.png" />
+
 </head>
 <body>
 
