--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <div class="process-section" style="background: #ffc107; color: #fff;">
     <div class="container py-5">
       <div class="row justify-content-md-center">
-        <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12" style="margin-top: -125px;">
+        <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 pr-5" style="margin-top: -125px;">
           <img src="img/process-1.svg" class="img-fluid">
         </div>
-        <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
+        <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left  py-5">
           <h2 class="display-4" style="color: #343a40;">A design thinker</h2>
           <p class="lead" style="color: #343a40;">From ideation and problem definition, to testing and evaluation, Christopher's process includes a well crafted, data- driven approach that both starts and ends with the user in mind.</p>
           <a href="/process" class="btn btn-md btn-outline-dark my-2" role="button">See Christopher's process &rarr;</a>
