--- a/work.html
+++ b/work.html
@@ -72,6 +72,18 @@
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
         <h2 class="display-5" id="design">UX Design</h2>
         <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
+
+        <!-- Extra large modal -->
+        <a type="button" data-toggle="modal" data-target=".bd-example-modal-xl"><img src="https://placehold.it/1200x1200" class="img-fluid" /></a>
+
+        <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+              <img src="https://placehold.it/1200x1200" class="img-fluid"/>
+            </div>
+          </div>
+        </div>
+
         <h2 class="display-5" id="research">User Research</h2>
         <p class="lead mb-5">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
         <h2 class="display-5" id="ia">Information Architecture</h2>
