--- a/process.html
+++ b/process.html
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">User cntered and data driven</h1>
+          <h1 class="display-3">User centered and data driven</h1>
           <p class="lead mb-5" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
           <img src="img/target.svg" class="img-fluid pb-1"/>
         </div>
