--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="row justify-content-md-center mt-5 py-5">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
           <h1 class="display-2"><span class="type"></span></h1>
-          <p class="lead">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and e-commerce. He offers a unique blend of creative, technical, and analytical skills, and uses <a href="/process">design thinking</a> and user centered design principles to solve <a href="/work">challenging business problems</a>.</p>
+          <p class="lead">Christopher Griffith is a UX and marketing generalist from Wilmington, Delaware with a demonstrated history in SaaS and e-commerce. He offers a unique blend of creative, technical, and analytical skills, and uses <a href="/process">design thinking</a> and user centered design principles to solve <a href="/work">challenging business problems</a>.</p>
           <a href="mailto:chrisrgriff@gmail.com" class="btn btn-lg btn-warning my-2" role="button">Let's talk &rarr;</a>
         </div>
       </div>
