--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 text-left">
           <h1 class="display-4">About Christopher</h1>
           <p class="lead">Christopher lives in Wilmington, Delaware with his wife and daughter. He enjoys the outdoors, podcasts, sports, music, and spending time with his family.</p>
+          <p class="lead">He holds a Bachelor of Science degree in Marketing from the University of Delaware with minors in Interactive Media and Advertising. He is also currently pursuing a Graduate Certificate in User Experience Design from the University of Wisconsin-Madison.</p>
           <p class="lead">This site was built from scratch using the <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> framework, <a href="https://undraw.co/" target="_blank">unDraw</a> illustrations, <a href="https://mattboldt.com/demos/typed-js/" target="_blank">Typed.js</a>, and is hosted via <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.</p>
           <a href="mailto:chrisrgriff@gmail.com" class="btn btn-lg btn-warning my-2 mr-2" role="button">Let's talk &rarr;</a>  <a href="https://linkedin.com/in/griffithchristopher" class="btn btn-lg btn-dark my-2" role="button" target="_blank">LinkedIn &rarr;</a>
         </div>
