--- a/process.html
+++ b/process.html
@@ -62,13 +62,13 @@
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
-        <p class="lead">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
+        <p class="lead">During my time as a part of the most recent cohort of the MadUX program, I have outlined (and refined) the process through which I tackle design problems.</p>
+        <p class="lead">Loosely based on the Design Thinking Process outlined by the Interaction Design Foundation, my process starts with the definition of a design problem. I use data, analysis, and competitive reviews to make informed decisions about where time and effort should be spent to make improvements to the user experience. Through ideation and sketching, I put pen to paper to flesh out possible design solutions. Wireframinging and rapid prototyping allow me to iterate on these concepts in a format that lends itself to testing. I try to capture as much information as possible through usability testing. This analysis of this newly collected data will help points to the definition of new problems as the process repeats itself.</p>
       </div>
     </div>
   </div>
 
-  <div class="container-fluid text-center">
+  <!--<div class="container-fluid text-center">
     <div class="row justify-content-md-center">
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-left">
         <img src="img/research.svg" class="img-fluid"/>
@@ -86,7 +86,7 @@
         <p class="lead">Accumsan tortor posuere ac ut. Lectus mauris ultrices eros in cursus. Leo vel orci porta non pulvinar. Gravida quis blandit turpis cursus in hac. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Tristique magna sit amet purus gravida quis blandit turpis cursus. Tincidunt augue interdum velit euismod in pellentesque. Etiam dignissim diam quis enim lobortis. Ornare lectus sit amet est placerat in egestas erat imperdiet. Montes nascetur ridiculus mus mauris vitae ultricies leo. Tristique senectus et netus et.</p>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <footer class="container-fluid py-5">
     <div class="row">
