--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b-list">
                 <h3 class="display-5">User Research</h3>
-                <p>Persona building and usability testing only scratch the surface – Christopher has a deep understanding of the importance that research plays within the design process.</p>
+                <p>Persona building and usability testing only scratch the surface. Christopher has a deep understanding of the importance that research plays within the design process.</p>
                 <a href="/work#research" class="btn btn-md btn-dark my-2" role="button">See Christopher's research work →</a>
             </div>
             <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c-list">
