--- a/process.html
+++ b/process.html
@@ -62,31 +62,13 @@
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
-        <p class="lead">During my time as a part of the most recent cohort of the MadUX program, I have outlined (and refined) the process through which I tackle design problems.</p>
-        <p class="lead">Loosely based on the Design Thinking Process outlined by the Interaction Design Foundation, my process starts with the definition of a design problem. I use data, analysis, and competitive reviews to make informed decisions about where time and effort should be spent to make improvements to the user experience. Through ideation and sketching, I put pen to paper to flesh out possible design solutions. Wireframinging and rapid prototyping allow me to iterate on these concepts in a format that lends itself to testing. I try to capture as much information as possible through usability testing. This analysis of this newly collected data will help points to the definition of new problems as the process repeats itself.</p>
+        <p class="lead">During Christopher's time as a part of the most recent cohort of the <a href="http://hci.wisc.edu/madux/" target="_blank">MadUX Capstone Certificate in User Experience Design</a> through the University of Wisconsin-Madison, he has outlined and refined the process through which he tackles design problems.</p>
+        <p class="lead">Loosely based on the <a href="https://www.interaction-design.org/literature/article/5-stages-in-the-design-thinking-process" target="_blank">Design Thinking Process</a> defined by the Interaction Design Foundation, Christopher's process starts and ends with the user in mind. After the definition of a design problem as determined through the use of data analysis, competitive reviews, and persona evaluation, he is able to make informed decisions about where time and effort should be spent to make improvements to an existing system.</p>
+        <p>Ideation and sketching formally kickoff the design phase, putting pen to paper to flesh out possible design solutions. This leads to wireframing and rapid prototyping, an iteratative approach to design in a format that lends itself to testing.</p>
+        <p>During the next phase, Christopher tries to capture as much information as possible through usability testing. The analysis of this newly collected data will help point to the definition of new problems as the process begins to repeat itself.</p>
       </div>
     </div>
   </div>
-
-  <!--<div class="container-fluid text-center">
-    <div class="row justify-content-md-center">
-      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-left">
-        <img src="img/research.svg" class="img-fluid"/>
-      </div>
-    </div>
-  </div>  
-
-  <div class="container">
-    <div class="row justify-content-md-center py-5">
-      <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
-        <p class="lead">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
-        <p class="lead">Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Dignissim convallis aenean et tortor at risus viverra adipiscing. Tristique risus nec feugiat in. Cursus sit amet dictum sit amet justo donec enim. Aliquam purus sit amet luctus venenatis lectus. Leo integer malesuada nunc vel risus commodo viverra maecenas accumsan. Turpis massa sed elementum tempus. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Aliquam ultrices sagittis orci a scelerisque. Ac tortor dignissim convallis aenean et tortor. Ac ut consequat semper viverra nam libero justo. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Volutpat lacus laoreet non curabitur gravida arcu ac tortor. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer. Auctor neque vitae tempus quam pellentesque nec. Arcu bibendum at varius vel pharetra vel turpis nunc eget. A arcu cursus vitae congue. Etiam non quam lacus suspendisse faucibus interdum posuere. At augue eget arcu dictum.</p>
-        <p class="lead">Pretium aenean pharetra magna ac. A erat nam at lectus urna duis convallis convallis. Nunc sed blandit libero volutpat sed cras ornare. At augue eget arcu dictum varius duis at consectetur. Id cursus metus aliquam eleifend mi in nulla posuere. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Semper quis lectus nulla at volutpat diam ut venenatis. Tellus at urna condimentum mattis pellentesque id.</p>
-        <p class="lead">Accumsan tortor posuere ac ut. Lectus mauris ultrices eros in cursus. Leo vel orci porta non pulvinar. Gravida quis blandit turpis cursus in hac. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Tristique magna sit amet purus gravida quis blandit turpis cursus. Tincidunt augue interdum velit euismod in pellentesque. Etiam dignissim diam quis enim lobortis. Ornare lectus sit amet est placerat in egestas erat imperdiet. Montes nascetur ridiculus mus mauris vitae ultricies leo. Tristique senectus et netus et.</p>
-      </div>
-    </div>
-  </div>-->
 
   <footer class="container-fluid py-5">
     <div class="row">
