--- a/process.html
+++ b/process.html
@@ -45,21 +45,21 @@
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0 mb-0">
+  <div class="jumbotron jumbotron-fluid mx-0 mb-0" style="background-color: #ffc107;">
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">User centered and data driven</h1>
-          <p class="lead mb-5" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
-          <img src="img/target.svg" class="img-fluid pb-1"/>
+          <h1 class="display-3">User-centered + data driven = proven results</h1>
+          <p class="lead mb-5">Christopher's approach to design projects is one rooted in research and analytics and has been crafted over many months of practice. It is detailed below and has been employed during <a href="/work">work on a number of different projects</a>.</p>
         </div>
       </div>
     </div>
   </div>
   <!-- END HERO -->
 
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc107" fill-opacity="1" d="M0,160L720,64L1440,32L1440,0L720,0L0,0Z"></path></svg>
 
-  <div class="container">
+  <div class="container" style="margin-top: -125px;">
     <div class="row justify-content-md-center">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
         <p class="lead">During Christopher's time as a part of the most recent cohort of the <a href="http://hci.wisc.edu/madux/" target="_blank">MadUX Capstone Certificate in User Experience Design</a> through the University of Wisconsin-Madison, he has outlined and refined the process through which he tackles design problems.</p>
