--- a/work.html
+++ b/work.html
@@ -45,44 +45,61 @@
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0 mb-0">
+  <div class="jumbotron jumbotron-fluid mx-0 mb-0 pb-0" style="background-color: #ffc107;">
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">Solving challenging business problems</h1>
-          <p class="lead mb-5" style="font-size:2.5rem !important;">Christopher's work history ranges from project management to digital marketing to UX</p>
-          <img src="img/flow.svg" class="img-fluid pb-1"/>
+          <h1 class="display-3">Using design thinking to solve challenging business problems</h1>
+          <p class="lead">With over six years of professional experience, Christopher has lead projects in a number digital facets. Below, find detailed descriptions of some of his most recent work from the MadUX Capstone Certificate Program through the University of Wisconsin-Madison.</p>
         </div>
       </div>
     </div>
   </div>
   <!-- END HERO -->
 
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc107" fill-opacity="1" d="M0,192L1440,64L1440,0L0,0Z"></path></svg>
 
-  <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
-      </div>
-    </div>
-  </div> 
-
-  <div class="container">
-    <div class="row justify-content-md-center py-5">
+  <div class="container" style="margin-top: -125px;">
+    <div class="row justify-content-md-center py-5 pt-0">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
         <h2 class="display-5" id="design">UX Design</h2>
-        <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
+        <p class="lead mb-5">After ideation through sketching, Adobe XD was used to create lo- and hi-fidelity wireframes. These frames were mapped to create prototypes at the same level of fidelity to demonstrate the critical path for a user conducting a search, locating a product, and evaluating that product prior to purchase. As you can see from the images below, the design of these frames changed over time. The hi-fidelity prototype was eventually used during usability testing.</p>
 
-        <!-- Extra large modal -->
-        <a type="button" data-toggle="modal" data-target=".bd-example-modal-xl"><img src="https://placehold.it/1200x1200" class="img-fluid" /></a>
-
-        <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-              <img src="https://placehold.it/1200x1200" class="img-fluid"/>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/lo-fi-wire.png" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Lo-fidelity wireframe</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/lo-fi-proto.png" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Lo-fidelity prototype</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/hi-fi-wire.png" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Hi-fidelity wireframe</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/hi-fi-proto.png" alt="Fourth slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Hi-fidelity prototype</h5>
+              </div>
             </div>
           </div>
         </div>
+
 
         <h2 class="display-5" id="research">User Research</h2>
         <p class="lead mb-5">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
