--- a/process.html
+++ b/process.html
@@ -48,18 +48,19 @@
   <div class="jumbotron jumbotron-fluid mx-0 mb-0" style="background-color: #ffc107;">
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">User-centered + data driven = proven results</h1>
-          <p class="lead mb-5">Christopher's approach to design projects is one rooted in research and analytics and has been crafted over many months of practice. It is detailed below and has been employed during <a href="/work">work on a number of different projects</a>.</p>
+        <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 text-left">
+          <img src="img/process-2.svg" class="img-fluid" alt="">
+        </div>
+        <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12 text-left">
+          <h1 class="display-4">A user-centered and data driven process</h1>
+          <p class="lead mb-3">Christopher's approach to design projects is one rooted in research and analytics and has been crafted over many months of practice. It is detailed below and has been employed during <a href="/work">work on a number of different projects</a>.</p>
         </div>
       </div>
     </div>
   </div>
   <!-- END HERO -->
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc107" fill-opacity="1" d="M0,160L720,64L1440,32L1440,0L720,0L0,0Z"></path></svg>
-
-  <div class="container" style="margin-top: -125px;">
+  <div class="container mt-5">
     <div class="row justify-content-md-center">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
         <p class="lead">During Christopher's time as a part of the most recent cohort of the <a href="http://hci.wisc.edu/madux/" target="_blank">MadUX Capstone Certificate in User Experience Design</a> through the University of Wisconsin-Madison, he has outlined and refined the process through which he tackles design problems.</p>
