--- a/work.html
+++ b/work.html
@@ -45,21 +45,22 @@
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0 mb-0 pb-0" style="background-color: #ffc107;">
+  <div class="jumbotron jumbotron-fluid mx-0 mb-0" style="background-color: #ffc107;">
     <div class="container">
       <div class="row justify-content-md-center mt-5 pt-5 pb-0">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
-          <h1 class="display-3">Using design thinking to solve challenging business problems</h1>
-          <p class="lead">With over six years of professional experience, Christopher has lead projects in a number digital facets. Below, find detailed descriptions of some of his most recent work from the MadUX Capstone Certificate Program through the University of Wisconsin-Madison.</p>
+        <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 text-left">
+          <img src="img/research.svg" class="img-fluid" alt="">
+        </div>
+        <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12 text-left">
+          <h1 class="display-4">Solving challenging business problems</h1>
+          <p class="lead mb-3">With over six years of professional experience, Christopher has lead projects in a number digital facets. Below, find detailed descriptions of some of his most recent work from the MadUX Capstone Certificate Program through the University of Wisconsin-Madison.</p>
         </div>
       </div>
     </div>
   </div>
   <!-- END HERO -->
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc107" fill-opacity="1" d="M0,192L1440,64L1440,0L0,0Z"></path></svg>
-
-  <div class="container" style="margin-top: -125px;">
+  <div class="container mt-5">
     <div class="row justify-content-md-center py-5 pt-0">
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
         <h2 class="display-5" id="design">UX Design</h2>
@@ -75,25 +76,25 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="img/lo-fi-wire.png" alt="First slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Lo-fidelity wireframe</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="img/lo-fi-proto.png" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Lo-fidelity prototype</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="img/hi-fi-wire.png" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Hi-fidelity wireframe</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="img/hi-fi-proto.png" alt="Fourth slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Hi-fidelity prototype</h5>
               </div>
             </div>
@@ -101,11 +102,45 @@
         </div>
 
 
-        <h2 class="display-5" id="research">User Research</h2>
-        <p class="lead mb-5">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
-        <h2 class="display-5" id="ia">Information Architecture</h2>
-        <p class="lead mb-5">Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Dignissim convallis aenean et tortor at risus viverra adipiscing. Tristique risus nec feugiat in. Cursus sit amet dictum sit amet justo donec enim. Aliquam purus sit amet luctus venenatis lectus. Leo integer malesuada nunc vel risus commodo viverra maecenas accumsan. Turpis massa sed elementum tempus. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Aliquam ultrices sagittis orci a scelerisque. Ac tortor dignissim convallis aenean et tortor. Ac ut consequat semper viverra nam libero justo. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Volutpat lacus laoreet non curabitur gravida arcu ac tortor. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer. Auctor neque vitae tempus quam pellentesque nec. Arcu bibendum at varius vel pharetra vel turpis nunc eget. A arcu cursus vitae congue. Etiam non quam lacus suspendisse faucibus interdum posuere. At augue eget arcu dictum.</p>
-        <h2 class="display-5" id="dev">Development</h2>
+        <h2 class="display-5 mt-5" id="research">Usability Testing</h2>
+        <p class="lead mb-5">Before any development is to begin on design work, proper testing needs to be conducted to ensure that the intended enhancements meet the needs of the system's users. Christopher has experience conducting remote moderated and unmoderated tests using a number of different platforms including UserTesting and Validately (shown below).</p>
+
+        <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/validately-1.png" alt="First slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Setting the test scenario</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/validately-2.png" alt="Second slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Participants are shown a task</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/validately-3.png" alt="Third slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Post-task simple ease question</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/validately-4.png" alt="Fourth slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Participants are asked to think aloud</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <h2 class="display-5 mt-5" id="dev">User Research</h2>
         <p class="lead mb-5">Pretium aenean pharetra magna ac. A erat nam at lectus urna duis convallis convallis. Nunc sed blandit libero volutpat sed cras ornare. At augue eget arcu dictum varius duis at consectetur. Id cursus metus aliquam eleifend mi in nulla posuere. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Semper quis lectus nulla at volutpat diam ut venenatis. Tellus at urna condimentum mattis pellentesque id.</p>
       </div>
     </div>
