--- a/work.html
+++ b/work.html
@@ -141,7 +141,42 @@
         </div>
         
         <h2 class="display-5 mt-5" id="dev">User Research</h2>
-        <p class="lead mb-5">Pretium aenean pharetra magna ac. A erat nam at lectus urna duis convallis convallis. Nunc sed blandit libero volutpat sed cras ornare. At augue eget arcu dictum varius duis at consectetur. Id cursus metus aliquam eleifend mi in nulla posuere. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Semper quis lectus nulla at volutpat diam ut venenatis. Tellus at urna condimentum mattis pellentesque id.</p>
+        <p class="lead mb-5">Before any sketches are drawn, wireframes are developed, and prototypes are mapped, Christopher's process calls for a deep understand of why they are being created and who they are being crafted for. This is done through user research, more specifically through the creation of user personas, task analysis, user journey maps, and more. A selection of these are shown below; samples like data sampling, competive analysis, and other reporting is available upon request.</p>
+
+        <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/persona.png" alt="First slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>User persona development</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/task-analysis.png" alt="Second slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Task analysis</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/user-journey-map.png" alt="Third slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>User journey mapping</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/validately-4.png" alt="Fourth slide" style="border: solid 1px #ccc;">
+              <div class="carousel-caption d-md-block">
+                <h5>Participants are asked to think aloud</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
