--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@
           <div class="list-group" id="list-tab" role="tablist">
             <a class="list-group-item list-group-item-action active" id="a-list" data-toggle="list" href="#a" role="tab" aria-controls="a">UX Design</a>
             <a class="list-group-item list-group-item-action" id="b-list" data-toggle="list" href="#b" role="tab" aria-controls="b">User Research</a>
-            <a class="list-group-item list-group-item-action" id="c-list" data-toggle="list" href="#c" role="tab" aria-controls="c">Information Architecture</a>
-            <a class="list-group-item list-group-item-action" id="d-list" data-toggle="list" href="#d" role="tab" aria-controls="d">Development</a>
           </div>
         </div>
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
@@ -110,22 +108,12 @@
             <div class="tab-pane fade show active" id="a" role="tabpanel" aria-labelledby="a-list">
               <h3 class="display-5">UX Design</h3>
                 <p>Paired with Christopher's background in usability and inclusive design, his experiences sketching, wireframing, and prototyping offer the skills needed to jumpstart any user experience design project.</p>
-                <a href="/work#design" class="btn btn-md btn-dark my-2" role="button">See Christopher's design work →</a>
+                <a href="/work" class="btn btn-md btn-dark my-2" role="button">See Christopher's design work →</a>
             </div>
             <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b-list">
-                <h3 class="display-5">User Research</h3>
+                <h3 class="display-5">Usability Testing and User Research</h3>
                 <p>Persona building and usability testing only scratch the surface. Christopher has a deep understanding of the importance that research plays within the design process.</p>
-                <a href="/work#research" class="btn btn-md btn-dark my-2" role="button">See Christopher's research work →</a>
-            </div>
-            <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c-list">
-              <h3 class="display-5">Information Architecture</h3>
-                <p>Christopher has years of practice in content strategy including hands on experience with CMS tools and the development of visual sitemaps.</p>
-                <a href="/work#ia" class="btn btn-md btn-dark my-2" role="button">See Christopher's IA work →</a>
-            </div>
-            <div class="tab-pane fade" id="d" role="tabpanel" aria-labelledby="d-list">
-              <h3 class="display-5">Development</h3>
-                <p>Bridging the gap between design and development, Christopher's strong background and demonstrated history working in HTML, CSS, and JavaScript help make wireframes a reality.</p>
-                <a href="/work#dev" class="btn btn-md btn-dark my-2" role="button">See Christopher's development work →</a>
+                <a href="/work" class="btn btn-md btn-dark my-2" role="button">See Christopher's research work →</a>
             </div>
           </div>
         </div>
