--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
   <title>Christopher Griffith: UX Designer, Developer, & Strategist</title>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146665395-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146665395-1');
+  </script>
+
   <meta property="og:title" content="Christopher Griffith" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://christophergriff.com" />
