--- a/process.html
+++ b/process.html
@@ -16,6 +16,16 @@
 
   <title>Process | Christopher Griffith: UX Designer, Developer, & Strategist</title>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146665395-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146665395-1');
+  </script>
+  
 </head>
 <body>
 
